# MultiModal-Rag-Medical-ChatBot

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  LICENSE  PROJECT_TRACKER.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: chat.py  sessions.py  upload.py
app/core/: config.py
app/infrastructure/: vectordb.py
app/models/: chat.py  db_models.py
app/services/: document_processor.py  rag_service.py
frontend/: app.py  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Sidebar.tsx
frontend/src/components/ui/: chat-input.tsx  ruixen-moon-chat.tsx  textarea.tsx
frontend_streamlit/: app.py
scripts/: evaluate_rag.py  generate_test_set.py  ingest_data.py
