[project]
name = "multi-modal-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=2.17.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "langchain>=0.1.10",
    "langchain-community>=0.0.25,<0.4.2",
    "langchain-core>=0.1.28",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.1.0",
    "open-clip-torch>=2.24.0",
    "openai>=1.14.0",
    "pandas>=2.2.0",
    "pillow>=10.2.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pymupdf>=1.23.21",
    "ragas>=0.1.7",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "sentence-transformers>=2.5.0",
    "sqlalchemy>=2.0.25",
    "streamlit>=1.31.1",
    "torchvision>=0.17.0",
    "unstructured>=0.12.5",
    "uvicorn[standard]>=0.27.0",
]
